# dkprune

./: .gitignore  Makefile  dkprune  dkprune.opam
src/: dkprune.ml  dune
